SERVER-89171 Running aggregations through the embedded router from a cluster without shards must succeed with an empty result (#20978)

GitOrigin-RevId: 3949e970a3d5c1659d3e01ac06bf8ab862666209